<resources>
    <string name="app_name">madproject</string>
    <string name="registration_title">REGISTRATION</string>
    <string name="welcome_to_malaysiasafe">Welcome to MalaysiaSafe</string>
    <string name="app_logo">App Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already Have an account? Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_bencana_map">BencanaMap</string>

    <!-- User Roles Array -->
    <string-array name="user_roles">
        <item>User</item>
        <item>Admin</item>
    </string-array>

    <string name="select_location">Select Location</string>
    <string name="select_disaster_type">Select Disaster Type</string>
    <string name="select_severity">Select Severity</string>
    <string name="hint_time">Enter time</string>
    <string name="hint_description">Enter description</string>
    <string name="submit_report">Submit Report</string>
    <string name="severity">Severity</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="todo">TODO</string>
    <string name="make_a_report">MAKE A REPORT</string>
</resources>