<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_malaysiasafe"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium" />

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logomadapp"
        tools:ignore="ImageContrastCheck" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        tools:ignore="VisualLintButtonSize" />

    <!-- SignUp Button -->
    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/green"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
